# go_bazel_grpc

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  deps.bzl  generate_proto.sh  generate_proto2.sh  go.mod  nest-cli.json  package.json
client/src/: BUILD.bazel  main.go
echo/: BUILD.bazel  echo.pb.go  echo.proto  echo_grpc.pb.go
nest-service/: tsconfig.app.json
nest-service/src/: BUILD.bazel
proto/echo/: BUILD.bazel  echo.proto
proto/echo2/: BUILD.bazel  echo2.proto
server/src/: BUILD.bazel  main.go
