load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(
    name = "gazelle",
    prefix = "github.com/peam1146/go_bazel_grpc",
)

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

exports_files(["tsconfig.json"])

alias(
    name = "go-server",
    actual = "//server/src",
)

alias(
    name = "go-client",
    actual = "//client/src",
)

alias(
    name = "nest-service",
    actual = "//nest-service/src",
)
