load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load(
    "@io_bazel_rules_docker//go:image.bzl",
    "go_image",
)

package(default_visibility = ["//visibility:public"])

go_library(
    name = "src_lib",
    srcs = ["main.go"],
    importpath = "github.com/peam1146/go_bazel_grpc/server/src",
    visibility = ["//visibility:private"],
    deps = [
        "//proto/echo",
        "//proto/echo2",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "src",
    embed = [":src_lib"],
)

go_image(
    name = "image",
    embed = [":src_lib"],
    goarch = "amd64",
    goos = "linux",
)
